--- a/style.css
+++ b/style.css
@@ -22,7 +22,6 @@ text-align: center;
     max-width: 30%; 
     float: left;
     margin-right: 20px;
-    
 }
 #img11{
     width: 100px;
@@ -60,11 +59,7 @@ text-align: center;
     color:white;
     background-color: rgb(114, 114, 114);
     font-size: 25px;
-    
-    
 }
-
-
 footer{
     display:block;
     clear:both;
@@ -79,7 +74,6 @@ footer{
 }
 #homepage_title{
     text-align: center;
-    
     position: absolute;
     top: 50%;
     left: 50%;
@@ -93,11 +87,9 @@ footer{
     text-shadow: 5px 5px 100px black, -5px -5px 100px rgb(0, 0, 0),5px 5px 10px black, -5px -5px 10px black;
     text-decoration:solid;
     top:800px;
-    
 }
 #homepage2{
 width: 1920px;
-
 }
 /* Mission*/
 #mission_text{
@@ -128,7 +120,6 @@ width: 1920px;
     border:inset;
     border-width: 5px;
 }
-    
 
 /* Gala */
 .margins label,
@@ -137,8 +128,6 @@ width: 1920px;
 .margins input[type="reset"] {
     margin-bottom: 10px;
 }
-
-
 /* Events*/
 /*Donate */
 #donate_main{
@@ -146,3 +135,8 @@ width: 1920px;
 }
 /* FAQ*/
 
+.main_source{
+    text-align: center;
+    margin-bottom: 100px;
+    margin-top: 100px;
+}
